# FaceMatcher

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
facematcher/data_collection/: collect_positive_data.py  create_folder.py  load_negative_data.py  preprocessing.py
facematcher/facial_recognition/: webcam_real_time_test.py
facematcher/siamese_neural_network/train/: train_model.py
tests/: test_preprocess_data.py  test_siamese_model.py
